[gd_scene load_steps=7 format=2]

[ext_resource path="res://enemies/gunner/Gunner.gd" type="Script" id=1]
[ext_resource path="res://enemies/gunner/Gunner_SM.gd" type="Script" id=2]
[ext_resource path="res://enemies/blueprint/icon.png" type="Texture" id=3]
[ext_resource path="res://multiuse_resources/HealthSystem.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="CircleShape2D" id=2]
radius = 550.0

[node name="Thrower" type="KinematicBody2D" groups=[
"thrower",
]]
collision_mask = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="state_machine" type="Node" parent="."]
script = ExtResource( 2 )

[node name="visuals" type="Node2D" parent="."]
editor/display_folded = true

[node name="main_sprite" type="Sprite" parent="visuals"]
texture = ExtResource( 3 )

[node name="collision" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="raycasts_down" type="Node2D" parent="."]

[node name="health_system" type="Node" parent="."]
script = ExtResource( 4 )

[node name="anim_enemy" type="AnimationPlayer" parent="."]

[node name="anim_damage" type="AnimationPlayer" parent="."]

[node name="scope" type="Area2D" parent="."]
editor/display_folded = true
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="scope"]
shape = SubResource( 2 )
[connection signal="body_entered" from="scope" to="." method="_on_scope_body_entered"]
[connection signal="body_exited" from="scope" to="." method="_on_scope_body_exited"]
